added color plates

--- a/index.html
+++ b/index.html
@@ -1,11 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lee</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section>
+        <div class="container">
+            <!-- grid Layout -->
+            <div class="div">
+                <div class="lee-grid">
+                    <!-- first column image list -->
+                    <div class="image-list-column ">
+                        <div class="sidebarImage">
+                            <div class="image-list">
+                                <img src="./Image/Image-1.png" alt="">
+                            </div>
+                            <div class="image-list">
+                                <img src="./Image/Image-2.png" alt="">
+                            </div>
+                            <div class="image-list">
+                                <img src="./Image/Image-3.png" alt="">
+                            </div>
+                            <div class="image-list">
+                                <img src="./Image/Image-4.png" alt="">
+                            </div>
+                            <div class="image-list">
+                                <img src="./Image/Image-5.png" alt="">
+                            </div>
+                            <div class="image-list">
+                                <img src="./Image/Image-6.png" alt="">
+                            </div>
+                            <div class="image-list">
+                                <img src="./Image/Image-7.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- second column Show display image -->
+                    <div class="show-image-column">
+                        <div class="display-image">
+                            <img src="./Image/image-3.png" alt="">
+                        </div>
+                    </div>
+                    <!-- third column Content box and color list -->
+                    <div class="image-details-column">
+                        <table border="0">
+                            <tr>
+                                <td class="table-title">Overral</td>
+                                <td class="table-normal-text">W32 d37 h38</td>
+                            </tr>
+                            <tr>
+                                <td class="table-title">inside</td>
+                                <td class="table-normal-text">W26 d21 h19</td>
+                            </tr>
+                            <tr class="opacity-row">
+                                <td class="table-title">inside</td>
+                                <td class="table-normal-text">W26 d21 h19</td>
+                            </tr>
+                            <tr>
+                                <td class="table-title">seat</td>
+                                <td class="table-normal-text">18</td>
+                            </tr>
+                            <tr>
+                                <td class="table-title">arm ht</td>
+                                <td class="table-normal-text">24</td>
+                            </tr>
+                            <tr>
+                                <td class="table-title">Back rail ht</td>
+                                <td class="table-normal-text">38</td>
+                            </tr>
+                        </table>
+                        <div class="horizontal-line"></div>
+                        <div class="color-palates">
+                            <div class="color-box">
+                                <div class="color Olive"></div>
+                                <h2>Olive</h2>
+                            </div>
+                            <div class="color-box">
+                                <div class="color Camel"></div>
+                                <h2>Camel</h2>
+                            </div>
+                            <div class="color-box">
+                                <div class="color Platinum-Grey"></div>
+                                <h2>Platinum Grey</h2>
+                            </div>
+                            <div class="color-box">
+                                <div class="color Oxblood"></div>
+                                <h2>Oxblood</h2>
+                            </div>
+                            <div class="color-box">
+                                <div class="color Anthracite"></div>
+                                <h2>Anthracite</h2>
+                            </div>
+                            <div class="color-box">
+                                <div class="color Red"></div>
+                                <h2>Red</h2>
+                            </div>
+                            <div class="color-box">
+                                <div class="color Green"></div>
+                                <h2>Green</h2>
+                            </div>
+                            <div class="color-box">
+                                <div class="color Blue"></div>
+                                <h2>Blue</h2>
+                            </div>
+                            <div class="color-box">
+                                <div class="color Orange"></div>
+                                <h2>Orange</h2>
+                            </div>
+                            <div class="color-box">
+                                <div class="color Yellow"></div>
+                                <h2>Yellow</h2>
+                            </div>
+                            <div class="color-box">
+                                <div class="color Pink"></div>
+                                <h2>Pink</h2>
+                            </div>
+                            <div class="color-box">
+                                <div class="color Maroon"></div>
+                                <h2>Maroon</h2>
+                            </div>
+                            <div class="color-box">
+                                <div class="color Indigo"></div>
+                                <h2>Indigo</h2>
+                            </div>
+                            <div class="color-box">
+                                <div class="color Magenta"></div>
+                                <h2>Magenta</h2>
+                            </div>
+                            <div class="color-box">
+                                <div class="color Tan"></div>
+                                <h2>Tan</h2>
+                            </div>
+                            <div class="color-box">
+                                <div class="color Teal"></div>
+                                <h2>Teal</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
