added some code

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     </div>
                     <!-- third column Content box and color list -->
                     <div class="image-details-column">
+                        <!-- image details table -->
                         <table border="0">
                             <tr>
                                 <td class="table-title">Overral</td>
@@ -75,6 +76,7 @@
                             </tr>
                         </table>
                         <div class="horizontal-line"></div>
+                        <!-- image color variant -->
                         <div class="color-palates">
                             <div class="color-box">
                                 <div class="color Olive"></div>
@@ -141,6 +143,25 @@
                                 <h2>Teal</h2>
                             </div>
                         </div>
+                        <div class="horizontal-line"></div>
+                        <!-- image info -->
+                        <div class="image-info">
+                            <div>
+                                <h2 class="image-info-title">Standard with</h2>
+                                <p>Welt</p>
+                                <p>Down Back</p>
+                                <p>Cushion - naturallee</p>
+                            </div>
+                            <div>
+                                <p>Same farme as 1211-01, back cushion is 3-inches lower</p>
+                            </div>
+                            <div class="image-info-notice">
+                                <p>* Please direct all pricing questions to your nearest LEE Industries Retail Partner
+                                    .*</p>
+                            </div>
+                        </div>
+                        <div class="horizontal-line"></div>
+
                     </div>
                 </div>
             </div>
