added dask top design done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lee</title>
     <link rel="stylesheet" href="style.css">
+    <!-- font awesome link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 
 <body>
@@ -44,6 +46,19 @@
                     <div class="show-image-column">
                         <div class="display-image">
                             <img src="./Image/image-3.png" alt="">
+                        </div>
+                        <div class="view-in-room">
+                            <p>View in room</p>
+                        </div>
+                        <div class="full-screen-icon">
+                            <img src="./Image/full-screen-icon.png" alt="">
+                        </div>
+                        <div class="prev-and-next-button">
+                            <button><i class="fa-solid fa-arrow-left"></i></button>
+                            <div class="deg368-image">
+                                <img src="./Image/360-Icon.png" alt="">
+                            </div>
+                            <button><i class="fa-solid fa-arrow-right"></i></button>
                         </div>
                     </div>
                     <!-- third column Content box and color list -->
@@ -161,12 +176,37 @@
                             </div>
                         </div>
                         <div class="horizontal-line"></div>
-
+                        <!-- icons -->
+                        <div class="social-group">
+                            <div class="details-page-icons">
+                                <div class="icons">
+                                    <i class="fa-solid fa-file"></i>
+                                </div>
+                                <div class="icons">
+                                    <i class="fa-solid fa-heart"></i>
+                                </div>
+                                <div class="icons">
+                                    <i class="fa-solid fa-folder-open"></i>
+                                </div>
+                                <div class="icons">
+                                    <i class="fa-solid fa-envelope"></i>
+                                </div>
+                                <div class="icons">
+                                    <i class="fa-solid fa-file-lines"></i>
+                                </div>
+                                <div class="icons">
+                                    <i class="fa-solid fa-location-dot"></i>
+                                </div>
+                            </div>
+                            <p class="">Share on social:</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <!-- font awesome link  -->
+    <script src="https://kit.fontawesome.com/253828a4b7.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
