added some code

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="full-screen-image">
                         <div class="show-image-column">
                             <div class="display-image">
-                                <img src="./Image/Image-1.png" alt="">
+                                <img src="./Image/test-image.png" alt="">
                             </div>
                             <div class="view-in-room">
                                 <p>View in room</p>
@@ -95,83 +95,83 @@
                         <div class="horizontal-line"></div>
                         <!-- image color variant -->
                         <div class="color-palates">
-                            <div onclick="setColorImage('invert(32%) sepia(12%) saturate(228%) hue-rotate(10deg) brightness(90%) contrast(95%)')"
+                            <div onclick="setColorImage(' invert(21%) sepia(54%) saturate(300%) hue-rotate(4deg) brightness(95%) contrast(83%)')"
                                 class="color-box">
                                 <div class="color Olive"></div>
                                 <h2>Olive</h2>
                             </div>
 
-                            <div onclick="setColorImage('invert(63%) sepia(39%) saturate(374%) hue-rotate(313deg) brightness(91%) contrast(87%)')"
+                            <div onclick="setColorImage(' invert(59%) sepia(11%) saturate(1486%) hue-rotate(348deg) brightness(93%) contrast(91%)')"
                                 class="color-box">
                                 <div class="color Camel"></div>
                                 <h2>Camel</h2>
                             </div>
-                            <div onclick="setColorImage('invert(78%) sepia(4%) saturate(172%) hue-rotate(159deg) brightness(92%) contrast(88%)')"
+                            <div onclick="setColorImage('invert(66%) sepia(11%) saturate(133%) hue-rotate(165deg) brightness(92%) contrast(88%)')"
                                 class="color-box">
                                 <div class="color Platinum-Grey"></div>
                                 <h2>Platinum Grey</h2>
                             </div>
-                            <div onclick="setColorImage('invert(35%) sepia(20%) saturate(303%) hue-rotate(333deg) brightness(88%) contrast(96%)')"
+                            <div onclick="setColorImage('invert(18%) sepia(25%) saturate(1229%) hue-rotate(309deg) brightness(86%) contrast(86%)')"
                                 class="color-box">
                                 <div class="color Oxblood"></div>
                                 <h2>Oxblood</h2>
                             </div>
-                            <div onclick="setColorImage('invert(19%) sepia(11%) saturate(331%) hue-rotate(189deg) brightness(92%) contrast(95%)')"
+                            <div onclick="setColorImage('invert(14%) sepia(8%) saturate(601%) hue-rotate(211deg) brightness(99%) contrast(87%)')"
                                 class="color-box">
                                 <div class="color Anthracite"></div>
                                 <h2>Anthracite</h2>
                             </div>
-                            <div onclick="setColorImage('invert(30%) sepia(82%) saturate(5867%) hue-rotate(339deg) brightness(90%) contrast(97%)')"
+                            <div onclick="setColorImage('invert(69%) sepia(65%) saturate(4467%) hue-rotate(323deg) brightness(100%) contrast(97%)')"
                                 class="color-box">
                                 <div class="color Red"></div>
                                 <h2>Red</h2>
                             </div>
-                            <div onclick="setColorImage('invert(37%) sepia(76%) saturate(4840%) hue-rotate(104deg) brightness(90%) contrast(97%)')"
+                            <div onclick="setColorImage('invert(87%) sepia(9%) saturate(1683%) hue-rotate(61deg) brightness(104%) contrast(87%)')"
                                 class="color-box">
                                 <div class="color Green"></div>
                                 <h2>Green</h2>
                             </div>
-                            <div onclick="setColorImage('invert(54%) sepia(23%) saturate(3138%) hue-rotate(186deg) brightness(90%) contrast(99%)')"
+                            <div onclick="setColorImage(' invert(65%) sepia(40%) saturate(636%) hue-rotate(170deg) brightness(90%) contrast(89%)')"
                                 class="color-box">
                                 <div class="color Blue"></div>
                                 <h2>Blue</h2>
                             </div>
-                            <div onclick="setColorImage('invert(26%) sepia(62%) saturate(1624%) hue-rotate(41deg) brightness(96%) contrast(97%)')"
+                            <div onclick="setColorImage('invert(73%) sepia(52%) saturate(430%) hue-rotate(358deg) brightness(94%) contrast(95%)')"
                                 class="color-box">
                                 <div class="color Orange"></div>
                                 <h2>Orange</h2>
                             </div>
-                            <div onclick="setColorImage('invert(100%) sepia(0%) saturate(11%) hue-rotate(332deg) brightness(98%) contrast(98%)')"
+                            <div onclick="setColorImage(' invert(94%) sepia(18%) saturate(599%) hue-rotate(332deg) brightness(106%) contrast(95%)')"
                                 class="color-box">
                                 <div class="color Yellow"></div>
                                 <h2>Yellow</h2>
                             </div>
-                            <div onclick="setColorImage('invert(76%) sepia(27%) saturate(5438%) hue-rotate(308deg) brightness(90%) contrast(95%)')"
+                            <div onclick="setColorImage('invert(85%) sepia(18%) saturate(6993%) hue-rotate(282deg) brightness(98%) contrast(79%)')"
                                 class="color-box">
                                 <div class="color Pink"></div>
                                 <h2>Pink</h2>
                             </div>
-                            <div onclick="setColorImage('invert(42%) sepia(31%) saturate(547%) hue-rotate(328deg) brightness(92%) contrast(96%)')"
+                            <div onclick="setColorImage('invert(34%) sepia(9%) saturate(3116%) hue-rotate(288deg) brightness(93%) contrast(85%)')"
                                 class="color-box">
                                 <div class="color Maroon"></div>
                                 <h2>Maroon</h2>
                             </div>
-                            <div onclick="setColorImage('invert(75%) sepia(18%) saturate(314%) hue-rotate(215deg) brightness(92%) contrast(91%)')"
+                            <div onclick="setColorImage('invert(76%) sepia(8%) saturate(1417%) hue-rotate(194deg) brightness(98%) contrast(90%)')"
                                 class="color-box">
                                 <div class="color Indigo"></div>
                                 <h2>Indigo</h2>
                             </div>
-                            <div onclick="setColorImage('invert(77%) sepia(64%) saturate(6627%) hue-rotate(280deg) brightness(91%) contrast(96%)')"
+                            <div onclick="setColorImage('invert(56%) sepia(77%) saturate(3477%) hue-rotate(249deg) brightness(99%) contrast(92%)')"
                                 class="color-box">
                                 <div class="color Magenta"></div>
                                 <h2>Magenta</h2>
                             </div>
-                            <div onclick="setColorImage('invert(95%) sepia(38%) saturate(145%) hue-rotate(33deg) brightness(95%) contrast(98%)')"
+                            <div onclick="setColorImage('invert(89%) sepia(24%) saturate(368%) hue-rotate(331deg) brightness(99%) contrast(94%)')"
                                 class="color-box">
                                 <div class="color Tan"></div>
                                 <h2>Tan</h2>
                             </div>
-                            <div onclick="setColorImage('invert(31%) sepia(16%) saturate(577%) hue-rotate(177deg) brightness(96%) contrast(97%)')"
+                            <div onclick="setColorImage('invert(44%) sepia(3%) saturate(4129%) hue-rotate(132deg) brightness(100%) contrast(106%)')"
                                 class="color-box">
                                 <div class="color Teal"></div>
                                 <h2>Teal</h2>
