added some code

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="full-screen-image">
                         <div class="show-image-column">
                             <div class="display-image">
-                                <img src="./Image/test-image.png" alt="">
+                                <img src="./Image/Image-1.png" alt="">
                             </div>
                             <div class="view-in-room">
                                 <p>View in room</p>
