Added new display image count

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <!-- second column Show display image -->
             <div class="full-screen-image">
-              <div class="show-image-column">
+              <div class="show-image-column" id="display-image-parent">
                 <div class="display-image">
                   <img src="./Image/Image-1.png" alt="" />
                 </div>
