added soime code

--- a/index.html
+++ b/index.html
@@ -225,7 +225,9 @@
           <div class="view-full-screen">
             <div class="show-full-screen-display-image">
               <img src="./Image/Image-1.png" alt="" />
-              <div class="close-full-screen-image"><i class="fa-solid fa-xmark"></i></div>
+              <div class="close-full-screen-image">
+                <i class="fa-solid fa-xmark"></i>
+              </div>
             </div>
           </div>
         </div>
